fix a couple things, add drop to shift index

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -54,8 +54,8 @@
   padding-bottom: 5px;
   border-radius: 15px;
   margin-top: 15px;
-  margin-left: 15px;
-  margin-right: 15px;
+  //margin-left: 15px;
+  //margin-right: 15px;
   margin-bottom: 15px;
   min-height: 285px;
 }
